src/test/resources/typeSystemTestModels/valid/expressions/SuperClass.java
package typeSystemTestModels.valid.expressions;

public class SuperClass {

  public int d = 1;
}