src/test/resources/typeSystemTestModels/invalid/expressions/SuperClass.java
package typeSystemTestModels.invalid.expressions;

public class SuperClass {

  public int aa = 1;
}
